--- a/wallet.html
+++ b/wallet.html
@@ -1,9 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Walet View</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/wallet.css">
+	<title>Wallet View</title>
 </head>
 <body>
+	<div class="container">
+		<div class="heading">
+			<p class="text-hd">
+				Wallet Balance
+			</p>
+			<p class="text-hd1">
+				N140,000
+			</p>
+		</div>
+
+		<div class="section-body">
+			<p>
+				<button class="btn buttone bg-blue">
+					TRANSFER TO ACCOUNT
+				</button>
+				<button class="btn buttone bg-white">
+					FUND ACCOUNT
+				</button>				
+			</p>
+		
+			<form class="form">
+				<div class="form-group">
+					<label for="Amount">AMOUNT</label>
+					<input type="text" class="form-control input" placeholder="dikethelmak">
+					<p class="label-below">MAX. AMOUNT  N50,000</p>
+				</div>	
+				<div class="form-group">
+					<label for="Amount">AMOUNT NUMBER</label>
+					<input type="text" class="form-control input" placeholder="dikethelmak">
+					<p class="label-below">DIKE THELMA KELECHI</p>
+				</div>	
+				<div class="form-group">
+					<label for="Amount">BANK</label>
+					<input type="text" class="form-control input" placeholder="dikethelmak">
+				</div>
+				<div class="section-bodyy">	
+					<p class="p-text">
+						<span>Transaction-Fee</span>
+						<span>N55</span>						
+					</p>			
+					<button type="button" class="btn buttone-hd">SEND</button>
+				</div>
+			</form>
+		</div>
+		
+
+	</div>
 
 </body>
 </html>
